[package]
name = "cartridge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

serde_json = "1"
serde = { version = "1.0", features = ["derive"] }

redis_cluster_async={version="0.7.2"}

once_cell = "1.18"

md5 = "0.7"

chrono = { version = "0.4", features = ["serde"] }

rand = "0.6.5"
uuid = {version="1.5.0",features = ["v4", "fast-rng", "macro-diagnostics", ]}

libsm="0.5.1"

dashmap="5.4"
regex = "1.10.2"

lazy_static = "1.4"

base64 = "0.21.5"
cipher = "0.4.4"

gmsm = "0.1"
hex = "0.3.2"
